adjusted button sizes to be fixed width by adding display property and width, added letter-spacing

--- a/app/sass/base/_reset.scss
+++ b/app/sass/base/_reset.scss
@@ -5,6 +5,8 @@
 body {
   width: 100%;
   margin: 0 auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 ul {
